toolbar | bottom nav | fragments
een toolbar, bottom nav met icoontjes en 3 lege fragments die opgeroepen worden indien bijhorende navbar icoontje is gebruikt.

--- a/CarMeets Android App/app/src/main/res/values/strings.xml
+++ b/CarMeets Android App/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
+    <!-- app -->
     <string name="app_name">CarMeets</string>
+
+    <!-- bottom navigation bar -->
+    <string name="bottom_navigation_home">Meetings</string>
+    <string name="bottom_navigation_favorieten">Favorieten</string>
+    <string name="bottom_navigation_account">Account</string>
+
+    <!-- meetinglijst -->
+    <string name="meetinglijstitem_titel">AndroidApp celebration meeting</string>
+
+    <!-- account -->
+    <string name="account_gebruikersnaam">Pikawika</string>
+
 </resources>
