--- a/CarMeets Android App/app/src/main/res/values/strings.xml
+++ b/CarMeets Android App/app/src/main/res/values/strings.xml
@@ -13,4 +13,19 @@
     <!-- account -->
     <string name="account_gebruikersnaam">Pikawika</string>
 
+    <!-- toolbar -->
+    <string name="toolbar_meetings_titel">Meetings</string>
+    <string name="toolbar_meetings_subtitel">Alle meetings</string>
+
+    <string name="toolbar_favorieten_titel">Favorieten</string>
+    <string name="toolbar_favorieten_subtitel">Liked en going meetings</string>
+
+    <string name="toolbar_account_titel">Account</string>
+    <string name="toolbar_account_subtitel">Instellingen aanpassen</string>
+
+    <!-- fragment tags -->
+    <string name="fragtag_meetinglijst">meetinglijst</string>
+    <string name="fragtag_favorietenlijst">favorietenlijst</string>
+    <string name="fragtag_account">account</string>
+
 </resources>
