strings naming conventie

--- a/CarMeets Android App/app/src/main/res/values/strings.xml
+++ b/CarMeets Android App/app/src/main/res/values/strings.xml
@@ -47,7 +47,7 @@
 
 
     <!-- carmeets -->
-    <string name="abouttext_carmeets_over">Net zoals vele autoliefhebbers was ik het beu steeds te moeten horen dat ik
+    <string name="about_carmeets_over">Net zoals vele autoliefhebbers was ik het beu steeds te moeten horen dat ik
         weer een kwaliteitsmeeting gemist had omdat ik niet wist wanneer deze plaatsvond. Daarom besloot ik, Lennert
         Bontinck, een app te maken waar je snel en eenvoudig alle meetings naar jouw smaak kan terugvinden en
         bewaren in je agenda.
