intent voor meeting toe te voegen aan kalender

--- a/CarMeets Android App/app/src/main/res/values/strings.xml
+++ b/CarMeets Android App/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <!-- errors -->
     <string name="error_no_navigation_app">U heeft geen navigatie applicatie geïnstalleerd op uw toestel.</string>
     <string name="error_no_browser_app">U heeft geen internet browser applicatie geïnstalleerd op uw toestel.</string>
+    <string name="error_no_calander_app">U heeft geen agenda applicatie geïnstalleerd op uw toestel.</string>
 
     <!-- warnings -->
 
