--- a/CarMeets Android App/app/src/main/res/values/strings.xml
+++ b/CarMeets Android App/app/src/main/res/values/strings.xml
@@ -66,6 +66,8 @@
     <string name="fragtag_meetingdetail">meetingdetail</string>
     <string name="fragtag_login">login</string>
     <string name="fragtag_register">register</string>
+    <string name="fragtag_manage_account">manageAccount</string>
+    <string name="fragtag_preferences">preferences</string>
 
     <!-- meeting -->
     <string name="alt_item_meeting_img">Afbeelding van meeting</string>
