Lege lijst error message

--- a/CarMeets Android App/app/src/main/res/values/strings.xml
+++ b/CarMeets Android App/app/src/main/res/values/strings.xml
@@ -116,6 +116,10 @@
     <string name="txt_loading">Bezig met laden…</string>
     <string name="txt_loading_why_it_takes_so_long">Het kan zijn dat dit even duurt. Waarom? CarMeets is een gratis service en maakt gebruik van een gratis Heroku server :). </string>
 
+    <!-- partial_emptry_list -->
+    <string name="txt_empty_list">Lege lijst…</string>
+    <string name="txt_empty_list_long">Deze lijst is momenteel jammergenoeg leeg.</string>
+
     <!-- carmeets -->
     <string name="txt_about_carmeets">Net zoals vele autoliefhebbers was ik het beu steeds te moeten horen dat ik
         weer een kwaliteitsmeeting gemist had omdat ik niet wist wanneer deze plaatsvond. Daarom besloot ik, Lennert
