--- a/CarMeets Android App/app/src/main/res/values/strings.xml
+++ b/CarMeets Android App/app/src/main/res/values/strings.xml
@@ -84,6 +84,10 @@
     <string name="btn_meeting_agenda">Opslaan in kalender</string>
     <string name="btn_meeting_route">Routebeschrijving</string>
     <string name="btn_meeting_website">Website</string>
+    <string name="txt_meeting_categories">Categorieën</string>
+    <string name="txt_meeting_amount_going">Mensen die gaan</string>
+    <string name="txt_meeting_amount_liked">Mensen dat dit leuk vinden</string>
+
 
     <!-- fragment_login -->
     <string name="txt_login_register">Nog geen account? Registreer hier gratis!</string>
